--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,11 @@
-
+@keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
 body 
     {
         margin : 0;
@@ -48,6 +55,7 @@ body
         flex-flow : column wrap;
         align-items : center;
         justify-content : center;
+        font-style : italic;
     }
 
 .first-image img
@@ -69,6 +77,7 @@ body
         flex-flow : column wrap; 
         justify-content : center;
         align-content : left;
+        font-style : italic;
     }
 
 
@@ -134,6 +143,7 @@ body
     {
         display : flex;
         flex-direction : column;
+        font-style : italic;
     }
 
 .image-three img 
@@ -157,6 +167,7 @@ body
         flex-direction : column;
         justify-content : center;
         padding-left : 200px;
+        font-style : italic;
     }
 
 .image-four img
@@ -317,28 +328,32 @@ body
         padding : 25px;
         width : 65%;
         height : 300px;
-        align-items : center;
+        align-items : start;
         justify-content : space-evenly;
+        font-size : 14px;
+        text-align : center;
     }
 
 .box-1
     {
-        height : 60%;
-        width : 200px;
+        height : 100%;
+        width : 300px;
         border : 3px solid grey;
     }
 
 .box-2 
     {
-        height : 60%;
-        width : 200px;
+        height : 100%;
+        width : 300px;
         border : 3px solid grey;
+        margin-left : 10px;
+        margin-right : 10px;
     }
 
 .box-3
     {
-        height : 60%;
-        width : 200px;
+        height : 100%;
+        width : 300px;
         border : 3px solid grey;
     }
 
@@ -348,7 +363,9 @@ body
         flex-wrap : wrap;
         width : 100%;
         height : 500px;
-        border : 3px solid grey;
+        border-left : 3px solid grey;
+        border-right : 3px solid grey;
+        border-bottom : 3px solid grey;
     }
 
 .content-page-1-top
@@ -377,6 +394,8 @@ body
         font-size : 15px;
         height : 75%;
         width : 500px; 
+        padding-top : 20px;
+        font-family : sans-serif;
     }
 
 
@@ -401,4 +420,9 @@ body
     {
         display : inline;
         padding : 5px;
+    }
+
+.content-page-1 img 
+    {
+        animation: rotation 2s infinite linear;
     }
