--- a/styles.css
+++ b/styles.css
@@ -195,25 +195,52 @@ body
         border : 3px solid gray;
     }
 
-.bio-header
-    {
-        display : flex;
-        width : 100%;
-        height : 75px;
-        justify-content : center;
-        align-items : center;
-        font-weight : 700;
-        font-size : 25px;
-        border-bottom : 3px solid grey;
-        background-color : navy;
-        color : white;
-    }
 
 .bio-content 
     {
         display : flex;
         width : 100%;
-        height : 425px;
+        height : 600px;
+        border : 3px solid grey; 
+        flex-wrap : wrap;
+        justify-content : center;
+    }
+
+.bio-top
+    {
+        display : flex;
+        height : 20%;
+        width : 100%;
+        justify-content : center;
+        align-items : center;
+        font-size : 20px;
+        padding-top : 20px;
+        text-align : center;
+        font-style : italic;
+    }
+
+.bio-images
+    {
+        display : flex;
+        height : 40%;
+        width : 100%;
+        justify-content : space-evenly;
+    }
+
+.bio-images img 
+    {
+        height : 200px;
+        width : 200px;
+    }
+
+.bio-text
+    {
+        display : flex;
+        height : 40%;
+        width : 50%;
+        justify-content : center;
+        align-items : center;
+        text-align : center;
     }
 
 
